WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169240
[cairo] error C2065: 'quality': undeclared identifier since
r213412
https://bugs.webkit.org/show_bug.cgi?id=169240
Summary
[cairo] error C2065: 'quality': undeclared identifier since r213412
Fujii Hironori
Reported
2017-03-06 17:11:01 PST
[cairo] error C2065: 'quality': undeclared identifier since
r213412
https://trac.webkit.org/changeset/213412
(
Bug 148878
)
> ..\..\Source\WebCore\platform\graphics\cairo\ImageBufferCairo.cpp(556): error C2065: 'quality': undeclared identifier
Attachments
Patch
(1.60 KB, patch)
2017-03-06 17:52 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-03-06 17:52:40 PST
Created
attachment 303594
[details]
Patch
Fujii Hironori
Comment 2
2017-03-06 17:58:38 PST
This happens only in WinCairo port. Because GTK+ port does not use this function.
WebKit Commit Bot
Comment 3
2017-03-06 19:11:17 PST
Comment on
attachment 303594
[details]
Patch Clearing flags on attachment: 303594 Committed
r213491
: <
http://trac.webkit.org/changeset/213491
>
WebKit Commit Bot
Comment 4
2017-03-06 19:11:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug