[cairo] error C2065: 'quality': undeclared identifier since r213412 https://bugs.webkit.org/show_bug.cgi?id=169240

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-03-06
Reviewed by Ryosuke Niwa.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::toDataURL): Name the unnamed second argument 'quality'.

Canonical link: https://commits.webkit.org/186253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213491 268f45cc-cd09-0410-ab3c-d52691b4dbfc